--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
   
   <h2>Web Developer</h2>
 
-  <img class="top-cloud"src="images/cloud.png" alt="cloud-img">
-  <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
-  <img class="mountain"src="images/mountain.png" alt="mountain-img">
+  <img class="top-cloud"src="cloud.png" alt="cloud-img">
+  <img class="bottom-cloud"src="cloud.png" alt="cloud-img">
+  <img class="mountain"src="mountain.png" alt="mountain-img">
 </div>
 
 <div class="middle-container" style="
